# local-llm-mcp

./: .coverage  .coveragearc  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  AGENT.md  AGENT_DEBUG.md  AGENT_REPORT.md  AGENT_TODO.md  AGENT_WORKPLAN.md  AGENT_bugs.json  CLAUDE.md  Dockerfile  README.md  SCHEMA.md  claude_code_bridge.py  claude_code_prompt_schema.json  conftest.py  container_output.txt  local_llm_mcp_server.py  mcp_keys.py  orchestrate.sh  pyproject.toml  pytest.ini  requirements.txt  sample_prompt.json  sample_prompt.xml  setup.sh  tasks.py  test.py  test_file_metadata_debug.py  test_jinja2_board_generation.py
.mcp-agents/c7143007/: conversation.json  metadata.json
.mcp-agents/d255c5ef/: metadata.json
.mcp-agents/f6edcb05/: conversation.json  metadata.json
api/: __init__.py  endpoints.py  http_server.py  mcp_auth.py  mcp_git_handlers.py  mcp_handler.py  mcp_tool_handlers.py  mcp_tools.py  mcp_validation_handlers.py  orchestrator.py  websocket_handler.py
claude/: README.md
core/: __init__.py  agent.py  agent_registry.py  config.py  deployment.py  llm_manager.py  security.py
docs/: html_to_mcp_mapping.md
examples/: target_repo_config.json
examples/CalculatorClaude/: test_calculator.py
examples/CalculatorClaude/.meta/: calculator.py.json  registry.yaml  test_calculator.py.json
prompts/: README.md  config.yaml
prompts/agents/: code_generation.txt  conversation.json  conversation.txt  structured_code_generation.json  structured_code_generation.txt
prompts/system/: tool_calling_json.json  tool_calling_json.txt  tool_calling_xml.txt
prompts/tools/: agent_operations.json  file_metadata.json  file_metadata.txt  git_operations.json  git_operations.txt  interface_registry.json  interface_registry.txt  local_model.json  validation.json  validation.txt  workspace.json  workspace.txt
schema/: python_metadata.json
schemas/: __init__.py  agent_schemas.py
scripts/: complexity_check.py  doc_coverage.py  init_target_repo.py  schema_validator.py  security_patterns.py  template_generator.py
src/api/orchestrator/: orchestrator.py
src/core/: exceptions.py
src/core/files/: __init__.py  file_manager.py  json_file_manager.py
src/core/prompts/: manager.py
src/core/utils/: __init__.py  response.py  utils.py
src/mcp/: handler.py
src/schemas/: python_code.xsd  python_components.py  xml_serializer.py
static/: orchestrator.html
static/css/: orchestrator.css
static/js/: agent-helpers.js  agent-operations.js  main.js  mcp-auth-handlers.js  mcp-client.js  mcp-parsers.js  orchestrator-main.js  ui-handlers.js  ui-templates.js
templates/: .pre-commit-config.yaml  algorithm_module.j2  class_module.j2  function_module.j2  main_module.j2  mixed_module.j2  python_file.j2  target_repo_conftest.py.j2  template_spec.json  test_module.j2
templates/agent/: task_handler.py.j2
templates/api/: crud_endpoint.py.j2
templates/base/: mcp_tool_base.py.j2
templates/function/: README_function.md.j2  function.py.j2  schema_function.json.j2  test_function.py.j2
templates/schema/: validator.py.j2
templates/specs/: crud_api.json  mcp_tool_base.json
templates/test/: test_suite.py.j2
tests/: conftest.py
tests/e2e/: test_llm_integration.py
tests/unit/: test_bridge_async_queueing.py  test_jinja2_board_generation.py  test_schema_system.py  test_tool_prompt_formatting.py  test_unified_parser.py  test_workspace_structured.py
(+87 files in other folders)
