[project]
name = "local-llm-mcp"
version = "0.1.0"
description = "Standardized Agent-Based Local LLM MCP Server with JSON Schema validation"
authors = [{name = "Tristan VanFossen", email = "vanfosst@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "starlette>=0.27.0",
    "uvicorn[standard]>=0.20.0",
    "fastapi>=0.100.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
    "websockets>=11.0.0",
    "llama-cpp-python>=0.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "schemas"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0"
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true